# spconv-triton

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  README.md  bench.sh  pyproject.toml  tox.ini
docs/: API.md  ENVIRONMENT_VARIABLES.md  a100.md  h100.md  rtx3060.md
scripts/: verify_fp16_accum_large_batch.py  verify_pairgen_kernel.py  verify_varying_size.py
spconv_triton/: __init__.py  compat.py  constants.py  core.py  test_utils.py  tools.py
spconv_triton/pytorch/: __init__.py  constants.py  conv.py  core.py  cppcore.py  functional.py  hash.py  identity.py  modules.py  ops.py  pool.py  spatial.py  tables.py  utils.py
spconv_triton/pytorch/_impl/: __init__.py  _autotune.py  gemm.py  pair_kernels.py  pairs.py  pool.py
spconv_triton/utils/: __init__.py
tests/: _saved_layout_runner.py  conftest.py  gen_golden.py  gen_golden_ext.py  gen_golden_fp16.py  gen_golden_tf32.py  gen_golden_wide.py  helpers.py  helpers_golden.py  test_api_surface.py  test_checksums.py  test_conv.py  test_conv_edge.py  test_ext_conv.py  test_ext_misc.py  test_ext_ops.py  test_ext_p2v.py  test_ext_pool.py  test_fp16_tight.py  test_int64_linearize.py  test_large_batch.py  test_misc_modules.py  test_module_protocol.py  test_network.py  test_ops.py  test_pool.py  test_sparse_conv_tensor.py  test_tf32.py  test_torch_compile.py  test_train_convergence.py  test_wide_conv.py  test_wide_fp16.py  test_zz_warm_cache.py
tests/data/: MANIFEST.sha256  golden_api.json  golden_ext_misc.pt  golden_ext_p2v.pt  golden_ext_pool.pt  golden_misc.pt  golden_net.pt  golden_proto.pt
