[project]
name = "spconv-triton"
version = "0.1.0b2"
license = "Apache-2.0"
license-files = ["LICENSE"]
readme = "README.md"
description = "Hardware-agnostic Triton sparse convolution, a drop-in replacement for spconv on NVIDIA and AMD."
authors = [{ name = "L. Reichardt" }]
keywords = [
    "sparse convolution",
    "submanifold",
    "spconv",
    "triton",
    "point cloud",
    "voxel",
    "3d perception",
    "lidar",
    "pytorch",
    "rocm",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Environment :: GPU",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
]
requires-python = ">=3.10"
dependencies = [
    "numpy>=1.24",
    # Do NOT declare `triton` here. Torch's own wheel metadata pins the exact
    # matching triton per backend (e.g. ROCm: `pytorch-triton-rocm`).
    "torch>=2.4",
]

[project.urls]
Homepage = "https://github.com/L-Reichardt/spconv-triton"
Repository = "https://github.com/L-Reichardt/spconv-triton"
Changelog = "https://github.com/L-Reichardt/spconv-triton/blob/master/CHANGELOG.md"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["spconv_triton"]

[tool.hatch.build.targets.sdist]
only-include = [
    "spconv_triton",
    "README.md",
    "LICENSE",
    "CHANGELOG.md",
    "pyproject.toml",
]

[dependency-groups]
# Default dev group: The unmaintained reference `spconv-cu126` is not here on purpose.
# Locks into backend and old python/torch versions, limiting compatibility tests.
dev = [
    "pre-commit==4.6.0",
    "ruff==0.15.4",
    "pytest>=9.0.3",
    "mypy==2.2.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
# Must match the package floor so lint/pyupgrade never suggest >3.10 syntax.
target-version = "py310"
line-length = 88
indent-width = 4
extend-exclude = [
    "tests/",
    ".venv/",
    ".claude/",
    "docs/",
    "**/test_*.py",
    "**/*_test.py",
    "**/conftest.py",
]

[tool.ruff.lint]
# Moderate set: real errors + import hygiene + modernization + likely bugs.
select = [
  "A",   # flake8-builtins - https://docs.astral.sh/ruff/rules/#flake8-builtins-a
  "E",   # pycodestyle errors - https://docs.astral.sh/ruff/rules/#error-e
  "F",   # Pyflakes - https://docs.astral.sh/ruff/rules/#pyflakes-f
  "I",   # isort - https://docs.astral.sh/ruff/rules/#isort-i
  "PT",  # pytest - https://docs.astral.sh/ruff/rules/#flake8-pytest-style-pt
  "Q",   # flake8-quotes - https://docs.astral.sh/ruff/rules/#flake8-quotes-q
  "RUF", # Ruff-specific rules - https://docs.astral.sh/ruff/rules/#ruff-specific-rules-ruf
  "S",   # bandit - https://docs.astral.sh/ruff/rules/#flake8-bandit-s
  "UP",  # pyupgrade - https://docs.astral.sh/ruff/rules/#pyupgrade-up
  "W",   # pycodestyle warnings - https://docs.astral.sh/ruff/rules/#pycodestyle-w
]
ignore = ["E501"]  # line length not enforced (long parity strings/URLs)

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401", "E402"]

[tool.ruff.format]
docstring-code-format = true
indent-style = "space"
quote-style = "double"
line-ending = "auto"
skip-magic-trailing-comma = false

[tool.mypy]
# Type-check the distributable package only. tests/ and docs/ are the frozen
# verification contract (never linted/typed) and scripts/ is dev tooling.
#
# python_version tracks the toolchain interpreter (3.12).
# The 3.10 floor is enforced instead by ruff's `target-version = "py310"`
# + the UP (pyupgrade) rule set.
python_version = "3.12"
files = ["spconv_triton"]
warn_redundant_casts = true
warn_unused_ignores = true
warn_unused_configs = true
warn_no_return = true

[[tool.mypy.overrides]]
module = ["triton.*", "torch.fx.symbolic_trace"]
ignore_missing_imports = true
